gridtable and column Ordered not delivered

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -192,6 +192,13 @@
                     }
                   }
                 }
+              },
+              "controlConfiguration": {
+                "_plant/@com.sap.vocabularies.UI.v1.LineItem": {
+                  "tableSettings": {
+                    "type": "GridTable"
+                  }
+                }
               }
             }
           }
