--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "sapui5"
   ],
   "main": "webapp/index.html",
-  "dependencies": {},
   "devDependencies": {
-    "@ui5/cli": "^3.0.0",
-    "@sap/ux-ui5-tooling": "1",
     "@sap-ux/ui5-middleware-fe-mockserver": "2",
+    "@sap/ux-specification": "^1.124.18",
+    "@sap/ux-ui5-tooling": "^1.18.0",
+    "@ui5/cli": "^3.0.0",
     "rimraf": "^5.0.5"
   },
   "scripts": {
